# https://www.gnu.org/software/automake/manual/html_node/Standard-Directory-Variables.html
dist_doc_DATA = AUTHORS.md ChangeLog.md CODE_OF_CONDUCT.md CONTRIBUTING.md \
	HOWTO-crypto.md HOWTO-faq.md INSTALL.md LICENSE NEWS.md README.md THANKS.md \
	wanhive-protocol-v1.0.0.pdf ../COPYING

if WH_WITH_EXECUTABLES
# https://www.gnu.org/software/automake/manual/html_node/Man-Pages.html
dist_man_MANS = wanhive.1
endif
